# FileOrganizer

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING_AI.md  FILE_ORGANIZER_SKILL.md  GEMINI.md  GPT.md  OpenFileOrganizer.vcxproj  README.md  README_CLI.md  RELEASE_NOTES.md  aider.save  build.bat  build_fuzz.bat  build_limited.bat  check_env.cpp  commit_msg.txt  fo.db  generate_dashboard.py  test_incremental.db  test_sanity.cpp  vcpkg.json  verify_incremental.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dashboard.yml  release.yml
benchmarks/: CMakeLists.txt  bench_dhash.cpp  bench_scanner.cpp  fo_benchmarks.cpp
cli/: CMakeLists.txt  cmd_lint.cpp  fo_cli.cpp
core/: CMakeLists.txt
core/include/fo/core/: ads_cache.hpp  classification_interface.hpp  database.hpp  duplicate_finders.hpp  duplicate_repository.hpp  engine.hpp  export.hpp  file_repository.hpp  ignore_repository.hpp  interfaces.hpp  lint_interface.hpp  ocr_interface.hpp  operation_repository.hpp  perceptual_hash_interface.hpp  provider.hpp  provider_registration.hpp  registry.hpp  rule_engine.hpp  scan_session_repository.hpp  thumbnail.hpp  types.hpp  version.hpp  version.hpp.in
core/include/fo/providers/: dhash.hpp  hasher_blake3.hpp  hasher_sha256.hpp  hasher_xxhash.hpp  metadata_exiv2.hpp  metadata_tinyexif.hpp  ocr_tesseract.hpp
core/include/fo/providers/blake3/: blake3_hasher.hpp
core/include/fo/providers/exiv2/: exiv2_metadata_provider.hpp
core/include/fo/providers/tesseract/: tesseract_ocr_provider.hpp
core/src/: ads_cache.cpp  classifier_onnx.cpp  database.cpp  dupe_size_fast.cpp  duplicate_finders.cpp  duplicate_repository.cpp  engine.cpp  export.cpp  file_repository.cpp  hasher_blake3.cpp  hasher_fast64.cpp  hasher_sha256.cpp  hasher_xxhash.cpp  ignore_repository.cpp  linter_std.cpp  metadata_exiv2.cpp  metadata_tinyexif.cpp  ocr_tesseract.cpp  operation_repository.cpp  perceptual_opencv.cpp  provider_registration.cpp  rule_engine.cpp  scan_session_repository.cpp  scanner_dirent.cpp  scanner_std.cpp  scanner_win32.cpp  thumbnail.cpp
core/src/providers/: dhash.cpp  dhash_reg.cpp  register_all_providers.cpp
core/src/providers/blake3/: blake3_hasher.cpp
core/src/providers/exiv2/: exiv2_metadata_provider.cpp
core/src/providers/tesseract/: tesseract_ocr_provider.cpp
docs/: AI_HANDOFF.md  API_REFERENCE.md  BENCHMARKING_PLAN.md  BENCHMARKING_RUNBOOK.md  BENCHMARKS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_EXTENDED.md  COMPETITIVE_FEATURES_SUMMARY.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  Doxyfile  FEATURES.md  FEATURE_WISHLIST.md  GUI_EVALUATION.md  LIBRARY_EVALUATION.md  LLM_INSTRUCTIONS.md  PROJECT_STRUCTURE.md  ROADMAP.md  SCANNER_EVALUATION.md  SUBMODULES.md  USER_MANUAL.md  competitive-feature-analysis.md  feature-summary.md
examples/: rules.yaml
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
scripts/: package.bat  package.sh  package_msi.bat
tests/: CMakeLists.txt  test_database.cpp  test_export.cpp  test_hasher.cpp  test_integration.cpp  test_linter.cpp  test_rule_engine.cpp  test_scanner.cpp
tests/fuzz/: fuzz_metadata.cpp  fuzz_rule_engine.cpp  fuzz_scanner.cpp
wix/: main.wxs
